Reverse geo resolve batch service